# warno-blender-plugin

./: .gitignore  PACKAGE_CONTENTS.txt  README.md  config.example.json  modding_suite_atlas_export.py  modding_suite_gfx_export.py  start_tgv_to_png_convert.bat  tgv_to_png.py  track_wheel_presets.example.json  warno_blender_addon.py  warno_export_addon.py  warno_spk_extract.py
manual_texture_corrector_cpp/: CMakeLists.txt  README.md
manual_texture_corrector_cpp/src/: main.cpp
moddingSuite/atlas_cli/: atlas_cli.version.json
